tests/golden/type_errors/range_bad_index.cd
let values = range(3);
print values[true];
