tests/golden/type_errors/range_bad_index.err
Type error at 2:13: range index must be number
  print values[true];
              ^
